--- a/completed.html
+++ b/completed.html
@@ -39,7 +39,7 @@
       </div>
       <div class="card">
         <div class="cta-row">
-          <a href="./firstDraft.html">
+          <a href="./EnglishBooks.html">
             <button class="secondary">Back to home</button>
           </a>
         </div>
